spacing on rep calculator fixed

--- a/src/scripts/Responsive.css
+++ b/src/scripts/Responsive.css
@@ -53,6 +53,10 @@
     margin-left: 15%
   }
 
+  .workout_rep_calculator{
+    margin-left: 0px;
+  }
+
 
   .exercise_container .form {
     margin-left: 20%;
